Update InsuranceController.java